# TachoGraphWizard

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTTS.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  README.md  bandit-report.json  pyproject.toml  renovate.json  tasks.md  usage.md
.github/scripts/: check_licenses.py
.github/workflows/: ci-cd.yml  copilot-setup-steps.yml  quality-check.yml  security-check.yml
docs/: future_template_export.md  implementation_plan.md  next_plan.md  phase0_verification_report.md  phase2_implementation.md  refactoring_plan.md  testing_strategy.md  text_inserter_refactoring_completion_report.md  text_inserter_refactoring_plan.md
docs/Completed/: future_template_export.md  implementation_notes.md  phase2_implementation.md  troubleshooting.md  version_upgrade_plan.md
docs/decisions/: 001-ellipse-based-background-removal.md
examples/: Yazaki15-6.json  Yazaki15-7.json  sample_data.csv
scripts/: install_plugin.ps1  install_plugin.py  install_plugin.sh
src/tachograph_wizard/: __init__.py  plugin.py  tachograph_wizard.py
src/tachograph_wizard/core/: __init__.py  background_remover.py  csv_parser.py  export_usecase.py  exporter.py  filename_generator.py  image_analysis.py  image_cleanup.py  image_operations.py  image_splitter.py  island_detector.py  logging_util.py  pdb_runner.py  settings_manager.py  template_exporter.py  template_manager.py  text_insert_usecase.py  text_renderer.py
src/tachograph_wizard/procedures/: __init__.py  template_exporter_procedure.py  text_inserter_procedure.py  wizard_procedure.py
src/tachograph_wizard/templates/: __init__.py  models.py
src/tachograph_wizard/templates/default_templates/: standard.json
src/tachograph_wizard/ui/: __init__.py  settings.py  settings_manager.py  template_exporter_dialog.py  text_inserter_dialog.py  text_inserter_dialog.ui
src/tachograph_wizard/ui/components/: __init__.py
src/tachograph_wizard/ui/pages/: __init__.py
src/tachograph_wizard/utils/: __init__.py  types.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  mock_gimp.py
tests/integration/: __init__.py
tests/unit/: test_background_remover.py  test_csv_parser.py  test_csv_parser_extended.py  test_export_usecase.py  test_exporter.py  test_exporter_extended.py  test_filename_generator.py  test_image_analysis.py  test_image_analysis_extended.py  test_image_cleanup.py  test_image_operations.py  test_island_detector.py  test_pdb_runner.py  test_pdb_runner_extended.py  test_settings.py  test_settings_manager_extended.py  test_template_exporter.py  test_template_manager_extended.py  test_text_insert_usecase.py  test_text_insert_usecase_patch.txt  test_text_inserter_dialog.py  test_text_renderer.py  test_text_templates.py  test_wizard_procedure.py
