[project]
name = "tachograph-wizard"
version = "0.1.0"
description = "GIMP 3 plugin for processing tachograph chart scanned images"
authors = [
    {name = "TachoGraphWizard Team", email = "tachograph@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pkgs.safetycli.com/repository/public/pypi/simple/"
default = true

[tool.hatch.build.targets.wheel]
packages = ["src/tachograph_wizard"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "NPY",
    "RUF",
]
ignore = [
    "E501",    # Line too long (handled by formatter)
    "S101",    # Use of assert (OK in tests)
    "E402",    # Module level import not at top (needed for gi.require_version)
    "PLC0415", # Import outside top-level (OK for tests and conditional imports)
    "ARG002",  # Unused method argument (OK for test fixtures)
    "TRY301",  # Abstract raise to inner function (too strict for small functions)
    "FBT001",  # Boolean positional arg (OK when clear from context)
    "FBT002",  # Boolean default positional arg (OK when clear from context)
    "FBT003",  # Boolean positional value in call (needed for GTK/GIMP APIs)
    "TC003",   # Move stdlib import into TYPE_CHECKING (false positive for Path)
    "PLR0913", # Too many arguments (GIMP API signatures require this)
    "BLE001",  # Blind exception catch (needed for robust error handling)
    "DTZ011",  # datetime.date.today() (acceptable for file naming)
    "TRY300",  # Consider moving to else block (doesn't improve clarity)
    "RET504",  # Unnecessary assignment before return (improves readability)
    "PLR2004", # Magic value in comparison (test constants are clear)
    "SIM105",  # Use contextlib.suppress (try-except-pass is clearer)
    "S110",    # try-except-pass (needed for GIMP API compatibility fallbacks)
    "S112",    # try-except-continue (needed for GIMP API compatibility fallbacks)
    "C901",    # Function too complex (GIMP compatibility code inherently complex)
    "PLR0911", # Too many return statements (needed for fallback chains)
    "PLR0912", # Too many branches (GIMP compatibility code inherently complex)
    "PLR0915", # Too many statements (GIMP compatibility code inherently complex)
    "SIM102",  # Use single if statement (readability preference)
    "EXE001",  # Shebang present but not executable (needed for GIMP plugin on Windows)
]
fixable = ["ALL"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
# Disable checks that don't work with GObject Introspection (GIMP/GTK APIs)
reportMissingImports = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
# Enable other strict checks
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportUntypedBaseClass = false  # GObject Introspection base classes have no type stubs
reportUntypedNamedTuple = true
reportPrivateUsage = true
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true

[tool.bandit]
exclude_dirs = [".venv", "build", "dist", ".eggs", "*.egg-info"]
skips = [
    "B101",  # assert (OK in tests)
    "B110",  # try-except-pass (needed for GIMP API compatibility fallbacks)
    "B112",  # try-except-continue (needed for GIMP API compatibility fallbacks)
]

[dependency-groups]
dev = [
    "basedpyright>=1.36.2",
    "bandit>=1.8.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
]
